--- a/cicle.yml
+++ b/cicle.yml
@@ -1,13 +1,15 @@
 machine:
-    java:
-        version: openjdk7 # デフォルトはopenjdk7
-    environment:
-        ANDROID_HOME: ~/Applications/android-sdk-macosx # なくてもよい。
+  java:
+    version: openjdk7 # デフォルトはopenjdk7
+
 dependencies:
+  pre:
     override:
-        - echo y | android update sdk --no-ui --filter "android-23, build-tools-23.0.2" # デフォルトで導入されているパッケージは入れる必要なし。下記参照
+      - echo update sdk
+      - echo y | android update sdk --no-ui --filter "android-23, build-tools-23.0.2" # デフォルトで導入されているパッケージは入れる必要なし。下記参照
 test:
   pre:
+    -  echo cp gradle.properties
     -  cp app/gradle.properties.dust app/gradle.properties
   override:
     - ./gradlew assembleDebug
