--- a/cicle.yml
+++ b/cicle.yml
@@ -4,9 +4,9 @@ machine:
 
 dependencies:
   pre:
-    override:
-      - echo update sdk
-      - echo y | android update sdk --no-ui --filter "android-23, build-tools-23.0.2" # デフォルトで導入されているパッケージは入れる必要なし。下記参照
+    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-23
+    - echo y | android update sdk --no-ui --all --filter build-tools-23.0.2
+
 test:
   pre:
     -  echo cp gradle.properties
