--- a/app/signingConfigs/release.gradle
+++ b/app/signingConfigs/release.gradle
@@ -1,15 +1,15 @@
 signingConfigs {
     release {
-        def signFile = file("../@release/keystore.txt")
-        def signingProps = new Properties()
-        signingProps.load(new FileInputStream(signFile))
-        storeFile file("../@release/release_keystore.jks")
-        keyAlias signingProps['KEY_ALIAS']
-        storePassword signingProps['STORE_PASSWORD']
-        keyPassword signingProps['KEY_PASSWORD']
-//        storeFile file("@release/debug.keystore")
-//        storePassword "android"
-//        keyAlias "androiddebugkey"
-//        keyPassword "android"
+//        def signFile = file("../@release/keystore.txt")
+//        def signingProps = new Properties()
+//        signingProps.load(new FileInputStream(signFile))
+//        storeFile file("../@release/release_keystore.jks")
+//        keyAlias signingProps['KEY_ALIAS']
+//        storePassword signingProps['STORE_PASSWORD']
+//        keyPassword signingProps['KEY_PASSWORD']
+        storeFile file("@release/debug.keystore")
+        storePassword "android"
+        keyAlias "androiddebugkey"
+        keyPassword "android"
     }
 }
