--- a/cicle.yml
+++ b/cicle.yml
@@ -2,9 +2,12 @@ machine:
   java:
     version: openjdk7 # デフォルトはopenjdk7
 
+checkout:
+  post:
+    - cp app/gradle.properties.dust app/gradle.properties
+
 dependencies:
   pre:
-    - cp app/gradle.properties.dust app/gradle.properties
     - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-23
     - echo y | android update sdk --no-ui --all --filter build-tools-23.0.2
 
