--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,12 @@
 machine:
   java:
-    version: openjdk7 # デフォルトはopenjdk7
+    version: oraclejdk8
+  environment:
+    ANDROID_HOME: /usr/local/android-sdk-linux
+    JAVA_OPTS: "-Xms512m -Xmx1024m"
+#    TERM: "dumb"
+#    ADB_INSTALL_TIMEOUT: "10"
+    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
 
 checkout:
   post:
@@ -10,6 +16,10 @@ dependencies:
   pre:
     - echo y | android update sdk --no-ui --all --filter "tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2,android-23"
+  cache_directories:
+    - ~/.android
+  override:
+    - ./gradlew dependencies
 
 test:
   override:
