--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
     buildToolsVersion "23.0.2"
 
     dexOptions {
-        // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
-        preDexLibraries = preDexEnabled && !isCi
+//        // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
+//        preDexLibraries = preDexEnabled && !isCi
     }
 
     defaultConfig {
@@ -46,8 +46,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
 
@@ -75,10 +75,14 @@ dependencies {
     //test用
     testCompile 'junit:junit:4.+'
     androidTestCompile 'com.android.support:support-annotations:23.+'
-    androidTestCompile('com.android.support.test:runner:0.+') {
+    testCompile 'junit:junit:4.12'
+    testCompile('com.squareup.assertj:assertj-android:1.1.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestCompile('com.android.support.test:rules:0.+') {
+    androidTestCompile('com.android.support.test:runner:0.4.+') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile('com.android.support.test:rules:0.4.+') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     androidTestCompile('com.squareup.assertj:assertj-android:1.+') {
