--- a/circle.yml
+++ b/circle.yml
@@ -31,4 +31,4 @@ test:
     - circle-android wait-for-boot
   override:
     - ./gradlew test
-    - ./gradlew connectedAndroidTest.
+    - ./gradlew connectedAndroidTest
