--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'deploygate'
 def isCi = "true".equals(System.getenv("CI"))
-def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+//def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
 
 android {
     compileSdkVersion 23
@@ -12,6 +12,7 @@ android {
     dexOptions {
 //        // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
 //        preDexLibraries = preDexEnabled && !isCi
+        preDexLibraries = !isCi
     }
 
     defaultConfig {
