token生成のテストした

--- a/app/buildTypes/debug.gradle
+++ b/app/buildTypes/debug.gradle
@@ -6,5 +6,6 @@ buildTypes {
         zipAlignEnabled true
         minifyEnabled false
         signingConfig signingConfigs.debug
+        testCoverageEnabled true
     }
 }
