--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,11 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:0.5.0'
     compile 'com.trello:rxlifecycle-kotlin:0.5.0'
 
+    //leakcanary
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.+'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
+
     //test用
     testCompile 'junit:junit:4.+'
     androidTestCompile 'com.android.support:support-annotations:23.+'
