--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'deploygate'
@@ -52,7 +53,6 @@ android {
     }
 
 
-
 }
 
 dependencies {
@@ -77,6 +77,11 @@ dependencies {
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
 
+    // crashlytics
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
+
     //test用
     testCompile 'junit:junit:4.+'
     androidTestCompile 'com.android.support:support-annotations:23.+'
@@ -99,12 +104,16 @@ buildscript {
     ext.kotlin_version = '1.0.0'
     repositories {
         mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 repositories {
     mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
 }
