--- a/app/signingConfigs/release.gradle
+++ b/app/signingConfigs/release.gradle
@@ -7,7 +7,7 @@ signingConfigs {
 //        keyAlias signingProps['KEY_ALIAS']
 //        storePassword signingProps['STORE_PASSWORD']
 //        keyPassword signingProps['KEY_PASSWORD']
-        storeFile file("@release/debug.keystore")
+        storeFile file("../@release/debug.keystore")
         storePassword "android"
         keyAlias "androiddebugkey"
         keyPassword "android"
