--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,11 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:0.5.0'
     compile 'com.trello:rxlifecycle-kotlin:0.5.0'
 
+    //dageer
+    compile 'com.google.dagger:dagger:2.+'
+    kapt 'com.google.dagger:dagger-compiler:2.+'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
     //leakcanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.+'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
@@ -100,8 +105,13 @@ dependencies {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
+
 buildscript {
-    ext.kotlin_version = '1.0.0'
+    ext.kotlin_version = '1.0.1-2'
     repositories {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
