--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,8 @@ dependencies {
     compile 'com.trello:rxlifecycle-kotlin:0.5.0'
 
     //dageer
-    compile 'com.google.dagger:dagger:2.+'
-    kapt 'com.google.dagger:dagger-compiler:2.+'
+    compile 'com.google.dagger:dagger:2.2'
+    kapt 'com.google.dagger:dagger-compiler:2.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     //leakcanary
