--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
 
         <activity
-            android:name=".TaskActivity"
+            android:name=".activity.TaskActivity"
             android:label="@string/title_task_untreated"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
