--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
+    compile "com.android.support:cardview-v7:23.+"
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'io.reactivex:rxandroid:+'
     compile 'com.squareup.okhttp3:okhttp:3.+'
