--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:0.5.0'
     compile 'com.trello:rxlifecycle-kotlin:0.5.0'
 
+    //eventbus
+    compile 'org.greenrobot:eventbus:3.0.+'
+
     //dageer
     compile 'com.google.dagger:dagger:2.2'
     kapt 'com.google.dagger:dagger-compiler:2.2'
