cicle ciでrelease版をビルドするようにした

--- a/circle.yml
+++ b/circle.yml
@@ -31,4 +31,5 @@ test:
 #    - circle-android wait-for-boot
   override:
     - ./gradlew test
+    - ./gradlew assembleRelease
 #    - ./gradlew connectedAndroidTest
