--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ def isCi = "true".equals(System.getenv("CI"))
 //def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24"
 
     dexOptions {
 //        // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
@@ -19,7 +19,7 @@ android {
     defaultConfig {
         applicationId "com.kamedon.todo"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 3
         versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -58,9 +58,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:design:23.+'
-    compile "com.android.support:cardview-v7:23.+"
+    compile 'com.android.support:appcompat-v7:24.+'
+    compile 'com.android.support:design:24.+'
+    compile "com.android.support:cardview-v7:24.+"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'io.reactivex:rxandroid:+'
@@ -95,7 +95,7 @@ dependencies {
 
     //test用
     testCompile 'junit:junit:4.+'
-    androidTestCompile 'com.android.support:support-annotations:23.+'
+    androidTestCompile 'com.android.support:support-annotations:24.+'
     testCompile('com.squareup.assertj:assertj-android:1.1.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
@@ -116,7 +116,7 @@ kapt {
 
 
 buildscript {
-    ext.kotlin_version = '1.0.1-2'
+    ext.kotlin_version = '1.0.3'
     repositories {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
